--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="card-body">
 	
 	<div class="row">
-  <div class="col-md-6"><img class="pull-left"  style ="max-width: 100%;" src="banner.jpg"/></div>
+  <div class="col-md-6"><img class="pull-left"  style ="max-width: 100%;" src="./assets/banner.jpg"/></div>
   <div class="col-md-6">
  <br/><br/>
    <h1><b>Learn something new everyday</b></h1>
@@ -35,24 +35,24 @@
 
   
   <div class="row">
-  <div class="col-md-12"><img class="pull-left"  style ="max-width: 100%;" src="information-main.jpg"/></div><div>
+  <div class="col-md-12"><img class="pull-left"  style ="max-width: 100%;" src="./assets/information-main.jpg"/></div><div>
     <br/><br/>
 	 <div class="d-flex justify-content-center"><b> <h3>Start Learning</h3></b></div><br/><br/>
   <div class="row">
-  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="information-orientation.jpg"/></div>
-   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="information-campus.jpg"/></div>
+  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/information-orientation.jpg"/></div>
+   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/information-campus.jpg"/></div>
  
-  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="information-guest-lecture.jpg"/></div>
+  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/information-guest-lecture.jpg"/></div>
  
   
 </div>
 <br/>
 <div class="row">
 
-  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="course-software.jpg"/></div>
-   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="course-computer-art.jpg"/></div>
+  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-software.jpg"/></div>
+   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-business.jpg"/></div>
  
-  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="course-design.jpg"/></div>
+  <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-design.jpg"/></div>
  
   
 </div>
