--- a/index.html
+++ b/index.html
@@ -46,13 +46,30 @@
  
   
 </div>
+<div class="row">
+  <div class="col-md-4">it doesn't hurt to kee</div>
+   <div class="col-md-4">test1</div>
+ 
+  <div class="col-md-4">test3</div>
+ 
+  
+</div>
 <br/>
 <div class="row">
 
   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-software.jpg"/></div>
-   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-business.jpg"/></div>
+   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-computer-art.jpg"/></div>
  
   <div class="col-md-4"><img class="pull-left"  style ="max-width: 100%;" src="./assets/course-design.jpg"/></div>
+ 
+  
+</div>
+
+<div class="row">
+  <div class="col-md-4">test</div>
+   <div class="col-md-4">test1</div>
+ 
+  <div class="col-md-4">test3</div>
  
   
 </div>
