--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   
 </div>
 <div class="row">
-  <div class="col-md-4">it doesn't hurt to kee</div>
-   <div class="col-md-4">test1</div>
+  <div class="col-md-4">software engeneer, courses,web development couses,mobile development,iot,ApIs</div>
+   <div class="col-md-4">computer art imaging&design web design Motion Graphics&visual effects,Computer Animation.</div>
  
-  <div class="col-md-4">test3</div>
+  <div class="col-md-4">design user experience design,user Research design,visual design</div>
  
   
 </div>
@@ -66,10 +66,10 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4">test</div>
-   <div class="col-md-4">test1</div>
+  <div class="col-md-4">Data</div>
+   <div class="col-md-4">Business</div>
  
-  <div class="col-md-4">test3</div>
+  <div class="col-md-4">Design</div>
  
   
 </div>
