--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <div class="container">
-  <h2>Kishore Acadamy</h2>
+  <h2>Happy Acadamy</h2>
   <div class="card bg-light text-dark">
     <div class="card-body">
 	
@@ -66,10 +66,10 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4">Data</div>
-   <div class="col-md-4">Business</div>
+  <div class="col-md-4">Data Courses Data Science,Big Data,SQL,Data visualizattion</div>
+   <div class="col-md-4">Business courses Product Development,Business Development,Startup</div>
  
-  <div class="col-md-4">Design</div>
+  <div class="col-md-4">Marketing Courses,Analytics,Content Marketing,Mobile Marketing</div>
  
   
 </div>
